<resources>
    <string name="app_name">Weight Tracking App</string>

    <string name="account_settings_label">Account Settings</string>
    <string name="starting_weight_label">Starting Weight in lbs:</string>
    <string name="starting_weight_hint">Example: 185</string>
    <string name="goal_weight_label">Goal Weight in lbs:</string>
    <string name="goal_weight_hint">Example: 145</string>
    <string name="target_date_label">Target Date:</string>
    <string name="target_date">Select A Date</string>
    <string name="height_label">Height:</string>
    <string name="height_hint">Example: 5.5</string>
    <string name="gender_label">Gender:</string>
    <string-array name="genders_array">
        <item>-Select-</item>
        <item>Woman</item>
        <item>Man</item>
        <item>Non-binary</item>
        <item>Prefer not to state</item>
    </string-array>
    <string name="save_settings">Save</string>
    <string name="goto_summary">Goto Summary</string>

    <string name="account_summary_label">Status Summary</string>
    <string name="weight_and_bmi_label">Current Weight &amp; BMI</string>
    <string name="weight">XXX</string>
    <string name="bmi">XX</string>
    <string name="avg_weight_loss_label">Avg Weight Loss</string>
    <string name="avg_weight_loss">XXX</string>
    <string name="weight_loss_to_date_label">Weight Loss To Date</string>
    <string name="weight_loss_to_date">XXX</string>

    <string name="entry_history_label">Entry History Review</string>

    <string name="weight_entry_label">Weight Status Updates</string>
    <string name="update_date_label">Today\'s date:</string>
    <string name="weight_update_label">Current Weight in lbs:</string>
    <string name="picture_update_label">Attach a progress photo:</string>
    <string name="cancel_return_to_summary">Cancel</string>

    <string name="add_entry">Add A New Entry</string>
    <string name="review_history">Review Entry History</string>
    <string name="update_settings">Update Your Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="image_of_a_camera">Image of a camera with a plus sign indicating the ability to add a photo</string>


</resources>