<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="8dp"
    tools:context=".WeightEntryActivity">

    <TextView
        android:id="@+id/weight_entry_label"
        android:layout_marginBottom="40dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_entry_label"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/update_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/weight_entry_label"
        android:text="@string/update_date_label"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/update_date_label"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="83dp"
        android:layout_marginBottom="-13dp"
        android:layout_toRightOf="@id/update_date_label"
        android:text="@string/target_date" />

    <TextView
        android:id="@+id/weight_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_date_label"
        android:layout_marginTop="50dp"
        android:text="@string/weight_update_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/weight_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/weight_update_label"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/weight_update_label"
        android:background="@android:color/transparent"
        android:hint="@string/goal_weight_hint"
        android:inputType="number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/picture_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_update_label"
        android:layout_marginTop="50dp"
        android:text="@string/picture_update_label"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/picture_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/picture_update_label"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="-35dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="-5dp"
        android:layout_toRightOf="@id/picture_update_label"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_36" />

    <Button
        android:id="@+id/cancel_return_to_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_update"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="125dp"
        android:text="@string/cancel_return_to_summary" />

    <Button
        android:id="@+id/save_weight_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_update"
        android:layout_alignParentRight="true"
        android:layout_marginTop="126dp"
        android:layout_marginRight="28dp"
        android:text="@string/save_settings" />

</RelativeLayout>